--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<router-outlet></router-outlet>
+<router-outlet name="logsHistory"></router-outlet>
+<router-outlet style="width: 100%"></router-outlet>
