--- a/src/app/pages/users-dashboard/user-profile/user-profile.component.html
+++ b/src/app/pages/users-dashboard/user-profile/user-profile.component.html
@@ -1,1 +1,9 @@
-<p>user-profile works!</p>
+<div [ngClass]="{ zoom_image_bg: zoomImage }" (click)="closeProfile()">
+  <img
+    class="_x_w-[60px] _x_h-[60px] _x_rounded-full _x_transition"
+    [ngClass]="{ zoom_image: zoomImage }"
+    [src]="userProfile.avatar"
+    alt="avatar"
+    (click)="onZoomImage($event)"
+  />
+</div>
