UMS/add-some-files-v3

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<router-outlet name="logsHistory"></router-outlet>
-<router-outlet style="width: 100%"></router-outlet>
+<div class="wraper">
+  <router-outlet name="logsHistory"></router-outlet>
+  <router-outlet></router-outlet>
+</div>
