--- a/src/app/pages/users-dashboard/user-profile/user-profile.component.scss
+++ b/src/app/pages/users-dashboard/user-profile/user-profile.component.scss
@@ -10,10 +10,11 @@
     justify-content: center;
     align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
-    z-index: 5;
+    z-index: 10;
 }
 
 .zoom_image{
     transform: scale(8);
     border: 1px solid white;
+    cursor: default;
 }
