--- a/src/app/shared/components/ums-popup/ums-popup.component.html
+++ b/src/app/shared/components/ums-popup/ums-popup.component.html
@@ -1,5 +1,5 @@
 <div
-  class="bg _x_fixed _x_top-0 _x_bottom-0 _x_left-0 _x_right-0 _x_flex _x_justify-center _x_items-{{position}} _x_z-10"
+  class="bg _x_fixed _x_top-0 _x_bottom-0 _x_left-0 _x_right-0 _x_flex _x_justify-center _x_items-{{position}} _x_z-10 _x_overflow-auto"
   [ngClass]="[position === 'start' ? '_x_pt-20' : '']"
   (click)="closePopup()"
 >
