UMS/fix-dynamic-form-bug

--- a/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
+++ b/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
@@ -147,7 +147,7 @@
       class="p-float-label _x_relative _x_flex _x_w-full _x_gap-1"
     >
       <input
-        (change)="fieldName = $event"
+        (change)="setFieldName($event)"
         type="text"
         id="fieldName"
         class="_x_w-full"
