UMS/add-autofocus-on-dynamic-form

--- a/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
+++ b/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
@@ -129,6 +129,8 @@
             formControlName="value"
             [id]="i"
             pInputText
+            pAutoFocus
+            [autofocus]="i === (dynamicFields.controls.length - 1) && isNewFieldNameAdded"
           />
           <label [for]="i">{{ fieldGroup.value.name }}</label>
           <span
