--- a/src/app/pages/users-dashboard/user-list/user-list.component.scss
+++ b/src/app/pages/users-dashboard/user-list/user-list.component.scss
@@ -1,4 +1,4 @@
-.table_row:hover{
-    background-color: rgba(161, 161, 161, 0.144);
-    cursor: pointer;
-}
+// .table_row:hover{
+//     background-color: rgba(161, 161, 161, 0.144);
+//     cursor: pointer;
+// }
