--- a/src/app/pages/users-dashboard/user-profile/user-profile.component.scss
+++ b/src/app/pages/users-dashboard/user-profile/user-profile.component.scss
@@ -1,20 +1,32 @@
-.zoom_image_bg{
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.5);
-    z-index: 10;
+.zoom_image_bg {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 10;
 }
 
-.zoom_image{
-    transform: scale(8);
-    border: 1px solid white;
-    cursor: default;
+.zoom_image {
+  transform: scale(8) !important;
+  border: 1px solid white;
+  cursor: default;
+}
+
+img:hover {
+  transform: scale(1.1);
+}
+
+td p {
+  font-family: cursive;
+}
+
+th {
+  font-family: monospace;
 }
