--- a/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
+++ b/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
@@ -1,7 +1,7 @@
 <ums-popup (close)="closePopup()">
   <form
     [formGroup]="documentForm"
-    class="_x_flex _x_flex-col _x_items-center _x_overflow-auto _x_max-h-[100vh] _x_bg-white _x_pt-[50px] _x_pb-[50px] _x_pl-[30px] _x_pr-[30px] _x_rounded-8 _x_gap-[35px] _x_w-[600px] _x_relative"
+    class="_x_flex _x_flex-col _x_rounded-[8px] _x_items-center _x_overflow-auto _x_max-h-[100vh] _x_bg-white _x_pt-[50px] _x_pb-[50px] _x_pl-[30px] _x_pr-[30px] _x_rounded-8 _x_gap-[35px] _x_w-[600px] _x_relative"
   >
     <p-button
       class="_x_absolute _x_right-2 _x_top-3"
