--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <app-loading *ngIf="loading$ | async"></app-loading>
+<app-header></app-header>
 <router-outlet name="logsHistory"></router-outlet>
 <router-outlet></router-outlet>
