UMS: add submit type for dynamic fields

--- a/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
+++ b/src/app/pages/users-dashboard/user-profile-deatail/user-profile-deatail.component.html
@@ -169,6 +169,7 @@
 
     <div class="_x_w-full _x_flex _x_justify-between _x_items-center">
       <p-button
+        [type]="addingField ? 'submit' : 'button'"
         [style]="{
           'background-color': 'green',
           border: 'none',
